# FocusAPP

./: .env.example  .gitignore  GAME_WATCHER_ARCHITECTURE.md  LICENSE  README.md  api_client.py  app.py  build-installer.bat  data_fetcher.py  package-lock.json  package.json  requirements.txt  riot_api.py
.github/workflows/: release.yml
build_scripts/: build.ps1  build_all.ps1  installer.iss
src/: index.html  overlay.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: champions.rs  game_watcher.rs  lcu.rs  main.rs  overlay.rs
src/scripts/: api.js  main.js
src/services/: csOverlayService.js  gameWatcherService.js  gameflowController.js  itemsService.js
src/styles/: _animations.css  _builds.css  _champions.css  _changelog.css  _components.css  _globals.css  _layout.css  _overlay.css  _player.css  _responsive.css  _tierlist.css  style.css
web/: index.html  main.js  style.css
