[package]
name = "focusapp-frontend"
version = "1.6.2"
description = "FocusApp - League of Legends Companion"
authors = ["Milan Hommet"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

# HTTP client for League Client API (local HTTPS with self-signed cert)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime for reqwest
tokio = { version = "1", features = ["fs"] }

# Base64 for Basic Auth encoding
base64 = "0.22"

# Error handling
thiserror = "2"

# URL encoding for query parameters
urlencoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
